Deployment/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: ${NAMESPACE}
  labels:
    app.kubernetes.io/name: hello-world
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hello-world
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
